Fix #219, #218, #126 and CSS Cleanup
Fix Edge layout issues on documentation landing page, clean up unused CSS, remove unnecessary font weights

--- a/src/hexo/themes/documentation/source/core/css/code.css
+++ b/src/hexo/themes/documentation/source/core/css/code.css
@@ -17,6 +17,7 @@ pre,
 }
 
 .highlight {
+    max-width: 64rem;
     border: 2px solid hsla(0, 0%, 0%, .03);
     margin-top: 2.4rem;
     margin-bottom: 2.4rem;
